plugins {
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
	id 'eclipse'
}

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web' 
	implementation 'org.springframework.boot:spring-boot-starter-jetty'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
	implementation 'org.junit.platform:junit-platform-commons:1.10.2'
	implementation files('libs/mssql-jdbc-12.6.1.jre11.jar')
}

test { 
	useJUnitPlatform()
	jvmArgs '-Xshare:off'
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-test' 
		implementation 'org.junit.jupiter:junit-jupiter-api:5.10.2' 
		implementation 'org.junit.platform:junit-platform-engine:1.10.2' 
	}
}
